 * client Changes
  * remove setEmbeded()
 
 * adds
  * add getOpenM_ID_MyAccount_URL() to recover URL to My OpenM-ID account

 * libraries Changes
  * upgrade openid version to commit of 21/02/2014